Fixing scrollabale tags on smaller screens

--- a/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
+++ b/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
@@ -215,7 +215,7 @@
     padding-left: 4vw;
     display: flex;
     align-items: center;
-    overflow-x: auto;  
+    overflow-x: hidden;  
     overflow-y: hidden;
     justify-content: left;
     height: 5vh;
